--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,104 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         PDF-Template
-version:      0.22
-version_from: lib/PDF/Template.pm
-installdirs:  site
+---
+name: PDF-Template
+version: 0.29_01
+author: ~
+abstract: PDF::Template
+license: perl
 requires:
-    File::Basename:                0.01
-    IO::File:                      0.01
-    pdflib_pl:                     3
-    Test::More:                    0.01
-    XML::Parser:                   0.01
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21
+  Encode: 0.01
+  PDF::Writer: 0.05
+  perl: 5.6.0
+build_requires:
+  Test::More: 0.47
+provides:
+  PDF::Template:
+    file: lib/PDF/Template.pm
+    version: 0.29_01
+  PDF::Template::Base:
+    file: lib/PDF/Template/Base.pm
+    version: ~
+  PDF::Template::Constants:
+    file: lib/PDF/Template/Constants.pm
+    version: ~
+  PDF::Template::Container:
+    file: lib/PDF/Template/Container.pm
+    version: ~
+  PDF::Template::Container::Always:
+    file: lib/PDF/Template/Container/Always.pm
+    version: ~
+  PDF::Template::Container::Conditional:
+    file: lib/PDF/Template/Container/Conditional.pm
+    version: ~
+  PDF::Template::Container::Font:
+    file: lib/PDF/Template/Container/Font.pm
+    version: ~
+  PDF::Template::Container::Footer:
+    file: lib/PDF/Template/Container/Footer.pm
+    version: ~
+  PDF::Template::Container::Header:
+    file: lib/PDF/Template/Container/Header.pm
+    version: ~
+  PDF::Template::Container::Loop:
+    file: lib/PDF/Template/Container/Loop.pm
+    version: ~
+  PDF::Template::Container::Margin:
+    file: lib/PDF/Template/Container/Margin.pm
+    version: ~
+  PDF::Template::Container::PageDef:
+    file: lib/PDF/Template/Container/PageDef.pm
+    version: ~
+  PDF::Template::Container::PdfTemplate:
+    file: lib/PDF/Template/Container/PdfTemplate.pm
+    version: ~
+  PDF::Template::Container::Row:
+    file: lib/PDF/Template/Container/Row.pm
+    version: ~
+  PDF::Template::Container::Scope:
+    file: lib/PDF/Template/Container/Scope.pm
+    version: ~
+  PDF::Template::Container::Section:
+    file: lib/PDF/Template/Container/Section.pm
+    version: ~
+  PDF::Template::Context:
+    file: lib/PDF/Template/Context.pm
+    version: ~
+  PDF::Template::Element:
+    file: lib/PDF/Template/Element.pm
+    version: ~
+  PDF::Template::Element::Bookmark:
+    file: lib/PDF/Template/Element/Bookmark.pm
+    version: ~
+  PDF::Template::Element::Circle:
+    file: lib/PDF/Template/Element/Circle.pm
+    version: ~
+  PDF::Template::Element::HorizontalRule:
+    file: lib/PDF/Template/Element/HorizontalRule.pm
+    version: ~
+  PDF::Template::Element::Image:
+    file: lib/PDF/Template/Element/Image.pm
+    version: ~
+  PDF::Template::Element::Line:
+    file: lib/PDF/Template/Element/Line.pm
+    version: ~
+  PDF::Template::Element::PageBreak:
+    file: lib/PDF/Template/Element/PageBreak.pm
+    version: ~
+  PDF::Template::Element::TextBox:
+    file: lib/PDF/Template/Element/TextBox.pm
+    version: ~
+  PDF::Template::Element::Var:
+    file: lib/PDF/Template/Element/Var.pm
+    version: ~
+  PDF::Template::Element::Weblink:
+    file: lib/PDF/Template/Element/Weblink.pm
+    version: ~
+  PDF::Template::Factory:
+    file: lib/PDF/Template/Factory.pm
+    version: ~
+  PDF::Template::Iterator:
+    file: lib/PDF/Template/Iterator.pm
+    version: ~
+  PDF::Template::TextObject:
+    file: lib/PDF/Template/TextObject.pm
+    version: ~
+generated_by: Module::Build version 0.2701
