--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: PDF-Template
-version: 0.29_01
+version: 0.29_02
 author: ~
 abstract: PDF::Template
 license: perl
@@ -9,11 +9,12 @@ requires:
   PDF::Writer: 0.05
   perl: 5.6.0
 build_requires:
+  IO::Scalar: 0.01
   Test::More: 0.47
 provides:
   PDF::Template:
     file: lib/PDF/Template.pm
-    version: 0.29_01
+    version: 0.29_02
   PDF::Template::Base:
     file: lib/PDF/Template/Base.pm
     version: ~
