--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: PDF-Template
-version: 0.29_02
+version: 0.30
 author: ~
 abstract: PDF::Template
 license: perl
@@ -14,7 +14,7 @@ build_requires:
 provides:
   PDF::Template:
     file: lib/PDF/Template.pm
-    version: 0.29_02
+    version: 0.30
   PDF::Template::Base:
     file: lib/PDF/Template/Base.pm
     version: ~
